// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionButton /> snapshot should match snapshot 1`] = `
<ReactionButton>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-reacted={false}
      data-selected={false}
      data-size={32}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-reacted={false}
            data-selected={false}
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper"
                data-size={12}
              />
            </Reaction>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with className 1`] = `
<ReactionButton
  className="example-class"
>
  <ButtonCircle
    className="example-class md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper example-class md-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-reacted={false}
      data-selected={false}
      data-size={32}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper example-class md-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-reacted={false}
            data-selected={false}
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper"
                data-size={12}
              />
            </Reaction>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with id 1`] = `
<ReactionButton
  id="example-id"
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    id="example-id"
    size={32}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-reacted={false}
      data-selected={false}
      data-size={32}
      id="example-id"
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-reacted={false}
            data-selected={false}
            data-size={32}
            id="example-id"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper"
                data-size={12}
              />
            </Reaction>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with reacted 1`] = `
<ReactionButton
  reacted={true}
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={true}
    size={32}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-reacted={true}
      data-selected={false}
      data-size={32}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-reacted={true}
            data-selected={false}
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper"
                data-size={12}
              />
            </Reaction>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with style 1`] = `
<ReactionButton
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-reacted={false}
      data-selected={false}
      data-size={32}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "color": "pink",
        }
      }
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-reacted={false}
            data-selected={false}
            data-size={32}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "color": "pink",
              }
            }
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper"
                data-size={12}
              />
            </Reaction>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ReactionButton>
`;
